[tool.poetry]
name = "crossmint"
version = "0.1.0"
description = ""
authors = ["Esteban Sánchez <esteban.sanchez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cleo = "^2.1.0"
api-client = "^1.3.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
black = "^24.2.0"
ruff = "^0.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "crossmint.main:main"
